# MBQC

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  amplitudes.txt  output.txt
cmake/: FindQuEST.cmake
command_line_scripts/: run_script
config/: config.h  config.h.in
docs/: Tokens.xml  annotated.html  annotated_dup.js  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_5e94d188cba95e774cdc9d0c259e64a6.html  dir_5e94d188cba95e774cdc9d0c259e64a6.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8dd1b576351d4498b09b7653aa979055.html  dir_a17940faa29cad4a7fb1cbcc8986b984.js  dir_b546cf57ff779f8e98b34a37a252bf8b.html  dir_b546cf57ff779f8e98b34a37a252bf8b.js  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  hierarchy.html  hierarchy.js  index.html  index.md  mainpage.md  mbqc_information.md  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  pages.html  style.css  tabs.css
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_6.js  all_7.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_1.js  files_4.js  files_b.js  files_c.js  files_d.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  functions_b.js  functions_e.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_3.js  typedefs_5.js  variables_0.js  variables_1.js  variables_2.js
docs_output/docbook/: _formulas.tex  annotated.xml  dir_05f47c3b30cbd06df5261c168690a0c6.xml  dir_59425e443f801f1f2fd8bbe4959a3ccf.xml  dir_5e94d188cba95e774cdc9d0c259e64a6.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_77105f38aa9966768d2a320610a7e036.xml  dir_8dd1b576351d4498b09b7653aa979055.xml  dir_a17940faa29cad4a7fb1cbcc8986b984.xml  dir_b546cf57ff779f8e98b34a37a252bf8b.xml  dir_d28a4824dc47e487b107a5db32ef43c4.xml  index.xml  mainpage.xml
docs_output/html/: Info.plist  Nodes.xml  annotated.html  annotated_dup.js  classes.html  dir_05f47c3b30cbd06df5261c168690a0c6.html  dir_05f47c3b30cbd06df5261c168690a0c6.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5e94d188cba95e774cdc9d0c259e64a6.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_77105f38aa9966768d2a320610a7e036.html  dir_77105f38aa9966768d2a320610a7e036.js  dir_8dd1b576351d4498b09b7653aa979055.html  dir_8dd1b576351d4498b09b7653aa979055.js  dir_9f351d46ce3cc29445a41dc3a31e6919.html  dir_a17940faa29cad4a7fb1cbcc8986b984.html  dir_b546cf57ff779f8e98b34a37a252bf8b.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4.js  doxygen.css  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  menudata.js  navtree.css  navtreedata.js  navtreeindex0.js  navtreeindex1.js  pages.html  style.css
docs_output/latex/: annotated.tex  dir_05f47c3b30cbd06df5261c168690a0c6.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_5e94d188cba95e774cdc9d0c259e64a6.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_77105f38aa9966768d2a320610a7e036.tex  dir_8dd1b576351d4498b09b7653aa979055.tex  dir_a17940faa29cad4a7fb1cbcc8986b984.tex  dir_b546cf57ff779f8e98b34a37a252bf8b.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  files.tex  hierarchy.tex  index.tex  refman.tex
examples/: mbqcStarterFile.cpp  mbqcStarterFileMac.cpp  tutorial01.cpp  tutorial02.cpp  tutorial03.cpp  tutorial04.cpp
figs/: 1DLattice2QubitsAnglesPiOn2Updated.dot  1DLatticeAllAngles0.dot  1DLatticeAllAngles0Updated.dot  1DLatticeOddQubitsAnglesEveryOther0And2PiMultiple.dot  1DLatticeOddQubitsAnglesEveryOther0And2PiMultipleUpdated.dot  CompleteBiPartite44Graph.dot  CompleteBiPartite44GraphUpdated.dot  GraphGeneratedFromFile.dot  K30Graph.dot  K30GraphUpdated.dot  K6Graph.dot  K6GraphUpdated.dot  Random4V4EGraph.dot  Random4V4EGraphUpdated.dot  graph (1).dot  lattice2DArrayGraph.dot  lattice2DArrayGraphUpdated.dot  lattice2DGraph.dot  lattice2DGraphCmake.dot  lattice2DGraphCmakeV2.dot  lattice2DGraphCmakeV2Updated.dot  lattice2DGraphMacUpdated.dot  lattice2DGraphUpdated.dot  singleBrickWorkGraphUpdated.dot
graphs_file_io/: graph.txt  single_brick_work_state.txt
html/: md__r_e_a_d_m_e.html  pages.html
latex/: md__r_e_a_d_m_e.tex  refman.tex
src/: 2023028_TwoQubitsEachPiOn2Angle.cpp  20230309_MBQC_ThreeQubitGHZ_V1.c  20230313_MBQC_V2.c  20230313_MBQC_V2.cpp  20230314_Functions_V1.hpp  20230314_TestLinearClusterState_V1.cpp  20230322_TestPathClusterMBQC_V4.cpp  20230328_OddPathGraph0AnglesLastQubitOutcome.cpp  20230328_OddPathGraphEveryOtherAngleZero.cpp  PrepareMeasureSingleQubit.c  createGraph copy.hpp  mbqcStarterFile.cpp  mbqcStarterFile.hpp  mbqcStarterFileDensityMatrix.cpp  packages.hpp  testQuESTCMAKE  testQuESTCMAKE.cpp  traverseGraph.cpp
src/archive/: 20230309_MBQC_V1.c  20230313_MBQC_V2.c  20230313_MBQC_V2.cpp  20230314_TestLinearClusterState_V1.cpp  20230316_MBQC_V3.cpp  20230322_TestPathClusterMBQC_V4.cpp  Using Paddle Quantum.ipynb  index.md  prototypeLatticeCreation.cpp
src/filesToGoThrough/: 20230330_CreatingMbqcFunction.cpp  copyQureqState.cpp  createLatticeGraph.cpp  createMbqcGraph.cpp  createPathGraph.cpp  directedGraphExample.cpp  edgeWeightUndirectedGraphExample.cpp  traverseGraph.cpp  undirectedGraphExample.cpp
src/functions/: createGraphFunctions.hpp  generalAssertFunctions.hpp  graphAssertFunctions.hpp
src/genericHelperFunctions/: generalAssertFunctions.hpp  (+2 more)
tests/: testAngleUpdateProbabilites.cpp  testBrickWorksGraph.cpp  testDampingMBQC.cpp  testDampingSimpleCircuitsQuEST.cpp  testFlowFunctions.cpp  testGeneralGraphConstructions.cpp  testGraphProperties.cpp  testMixDensityMatrices.cpp  testNoNoiseSimpleCircuitsQuEST.cpp  testNoiseModelsQuEST.cpp  testOddNumberQubitAnglesAllZero.cpp  testOddNumberQubitsEverySecondsAngleZero.cpp  testReadingGraphFromFile.cpp  testTwoQubitsAnglesPiOnTwo.cpp
(+677 files in other folders)
